Wed Mar 28 14:24:38 BST 2001  Richard Boulton <richard.boulton@omsee.com>

	* Set elite set size to max(10, sqrt(number of subqueries)) by
	  default.  This is rather more useful than the old default of 0.

Wed Mar 28 10:25:35 BST 2001 Chris Emerson <chris.emerson@omsee.com>

	* QuartzDatabase now implements replace_document(), and 
	  delete_document() now removes keys/attributes as well.
	  However, postlist entries are not yet correctly removed,
	  so this will cause problems.

	* Added a test for deleting/replacing documents, which passes.

Tue Mar 27 17:31:58 BST 2001 Chris Emerson <chris.emerson@omsee.com>

	* QuartzAttributes now has a method to delete a document's
	  attributes, and QuartzRecordManager has a replace_ method.
	  (But the code which uses these isn't in this commit).

Thu Mar 22 15:58:08 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Change definition of OmQuery::is_defined(), so that elite set
	  queries are undefined until a size is specified for the set.

Wed Mar 21 14:29:04 GMT 2001 Chris Emerson <chris.emerson@omsee.com>

	* Implemented delete_document and replace_document in inmemory
	  database.

Wed Mar 21 12:39:13 GMT 2001 Olly Betts

	* Tweak to docs/quickstart.html.

Wed Mar 21 02:50:19 GMT 2001 Olly Betts

	* Entirely removed sleepcat backend and all references to it.

	* Disable muscat36 backend by default.

Tue Mar 20 18:47:12 GMT 2001 Olly Betts

	* open_document() now takes a lazy flag - if not set we need to check
	  that the docid given actually exists.

	* heavy_duty flag now a bool instead of an int.

Mon Mar 19 19:16:34 GMT 2001 Olly Betts

	* Added test getdoc1 to check exceptions are thrown for out-of-range
	  docids (currently they aren't for quartz and muscat36 backends).

Mon Mar 19 17:17:31 GMT 2001 Olly Betts

	* New simpler implementation of leak detection in testsuite.
	  Currently doesn't support malloc/calloc/realloc/free.

Mon Mar 19 16:46:16 GMT 2001  Richard Boulton <richard.boulton@omsee.com>
